# weblauncher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml
src/: command.rs  configuration.rs  main.rs
src/dashboard/: dashboard.html  mod.rs
tests/: basic.toml
