[package]
name = "weblauncher"
description = "execute commands through a web interface"
version = "1.2.0"
repository = "https://github.com/Ithyx/WebLauncher"
license = "MIT OR Apache-2.0"
readme = "README.md"

edition = "2024"

[dependencies]
log = "0.4"
simple_logger = "5.0"

anyhow = "1.0"
clap = { version = "4.5", features = [ "derive" ] }
dirs = "6.0"

rocket = { version = "0.5", features = [ "json" ] }
rocket_cors = "0.6"

serde = "1.0"
toml = "0.8"
